一応JaCoCoが動いたけど，カバレッジ測定は上手くできてない感じ...。